[build-system]
build-backend = "cmeel.build"
requires = [
  "cmeel-boost ~= 1.83.0",
  "cmeel[build]",
  "hpp-util[build]"
]

[project]
dependencies = [
  "cmeel-boost ~= 1.83.0",
  "hpp-util"
]
description = "Classes for doing statistics."
license = "BSD-2-Clause"
name = "hpp-statistics"
version = "6.0.0"

[tool.ruff]
extend-exclude = ["cmake"]

[tool.ruff.lint]
extend-select = ["I", "NPY", "RUF", "UP", "W"]

[tool.tomlsort]
all = true
